# turbo-ai

./: AsynchronousGenerators.md  FAQ.md  LICENSE  README.md  TODOS.md  autodoc.config.json  pyproject.toml  pytype.toml  scratchpad.py
.autodoc/docs/data/: docstore.json  hnswlib.index
.autodoc/docs/json/turbo_chat/: __init__.json  chat.json  config.json  errors.json  runner.json  summary.json  turbo.json
.autodoc/docs/json/turbo_chat/bots/: __init__.json  qa.json  self_ask.json  summarize.json  summary.json
.autodoc/docs/json/turbo_chat/cache/: __init__.json  simple.json  summary.json
.autodoc/docs/json/turbo_chat/memory/: __init__.json  local_memory.json  summary.json  summary_memory.json  truncated_memory.json
.autodoc/docs/json/turbo_chat/structs/: __init__.json  messages.json  proxies.json  result.json  scratchpad.json  signals.json  summary.json
.autodoc/docs/json/turbo_chat/types/: __init__.json  cache.json  generators.json  memory.json  messages.json  misc.json  summary.json  tools.json
.autodoc/docs/json/turbo_chat/utils/: __init__.json  args.json  fn.json  lang.json  retries.json  summary.json  template.json  (+1 more)
.autodoc/docs/markdown/turbo_chat/: __init__.md  chat.md  config.md  errors.md  runner.md  summary.md  turbo.md
.github/workflows/: main.yml
notebooks/: random.ipynb  scratchpad.ipynb
tests/: test_cache.py  test_completion.py  test_count_tokens.py  test_debug.py  test_example_message.py  test_generate_no_yield.py  test_generate_with_options.py  test_log.py  test_memory_arg.py  test_memory_args.py  test_memory_filter.py  test_memory_injection.py  test_message_template.py  test_qa.py  test_qa_bot.py  test_scratchpad.py  test_self_ask_agent.py  test_self_ask_bot.py  test_sticky_messages.py  test_subqueries.py  test_subqueries_bot.py  test_summarize_bot.py  test_toolbot.py  test_toolbot_complex.py  test_turbo.py  test_turbo_example.py  test_turbo_original_fn.py
turbo_chat/: __init__.py  chat.py  completion.py  config.py  remaining.md  run.py  runner.py  turbo.py
turbo_chat/agents/: self_ask.py
turbo_chat/agents/tool/: bot.py
turbo_chat/apps/: __init__.py  qa.py  summarize.py
turbo_chat/apps/subqueries/: __init__.py  scratchpad.py
turbo_chat/bots/: __init__.py  self_ask.py  summarize.py  tool_bot.py
turbo_chat/bots/subqueries/: bot.py  scratchpad.py  template.py
turbo_chat/bots/tool/: bot.py  scratchpad.py  template.py
turbo_chat/bots/tool_bot/: __init__.py  bot.py  scratchpad.py  template.py
turbo_chat/cache/: __init__.py  redis.py  simple.py
turbo_chat/memory/: __init__.py  list_memory.py  local_memory.py  summary_memory.py  truncated_memory.py
turbo_chat/structs/: __init__.py  cache.py  config.py  generators.py  memory.py  messages.py  proxies.py  result.py  scratchpad.py  signals.py
turbo_chat/types/: __init__.py  generators.py  memory.py  messages.py  tools.py
turbo_chat/utils/: __init__.py  args.py  debug.py  fn.py  lang.py  pprint.py  retries.py  template.py  tokens.py
turbo_chat_old/: chat.py  completion.py  errors.py  runner.py
turbo_chat_old/bots/: qa.py
turbo_chat_old/bots/subqueries/: __init__.py
turbo_chat_old/cache/: __init__.py  redis.py
turbo_chat_old/structs/: proxies.py  result.py  scratchpad.py
turbo_chat_old/types/: cache.py  generators.py  memory.py  messages.py  misc.py  tools.py
turbo_chat_old/utils/: __init__.py
(+56 files in other folders)
