[tool.poetry]
name = "turbo-chat"
version = "0.2.8"
description = "Idiomatic way to build chatgpt apps using async generators in python"
authors = ["Diwank Singh Tomer <singh@diwank.name>"]
license = "MIT"
readme = "README.md"
packages = [{include = "turbo_chat"}]

[tool.poetry.dependencies]
python = "<3.11,>=3.8"
aiohttp = "^3.8.4"
openai = "^0.27.0"
pydantic = "^1.10.5"
tenacity = "^8.2.2"
tiktoken = "^0.3.1"
parse = "^1.19.0"
jinja2 = "^3.1.2"
jinja2schema = "^0.1.4"
jsonschema = "^4.17.3"
lemminflect = "^0.2.3"
proxytypes = "^0.10.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.254"
pytype = "^2023.3.2"
poethepoet = "^0.18.1"
ward = "^0.67.2b0"
ipython = "^8.11.0"
nest-asyncio = "^1.5.6"

[tool.poe.tasks]
_ruff = "ruff --fix **/*.py"
_black = "black ."
_pytype = "pytype --config=pytype.toml"
lint = ["_ruff", "_black"]
check = ["lint", "_pytype"]
test = "ward"
all = ["check", "test"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
