[tool.poetry]
name = "turbo-chat"
version = "0.3.12"
description = "Idiomatic way to build chatgpt apps using async generators in python"
authors = ["Diwank Singh Tomer <singh@diwank.name>"]
license = "MIT"
readme = "README.md"
packages = [{include = "turbo_chat"}]

[tool.poetry.dependencies]
python = "<3.11,>=3.8"
aiohttp = "^3.8.4"
openai = "^0.27.7"
pydantic = "^1.10.8"
tenacity = "^8.2.2"
tiktoken = "^0.4.0"
parse = "^1.19.0"
jinja2 = "^3.1.2"
lemminflect = "^0.2.3"
dirtyjson = "^1.0.8"
redis = {version = ">=4.5.0,<5.0.0", optional = true}
pygments = {version = "^2.15.0", optional = true}
colorama = {version = "^0.4.6", optional = true}
blobfile = "^2.0.1"
pyrsistent = "^0.19.3"
aiochan = "^0.2.7"
cloudevents = "^1.9.0"
duckdb = "^0.8.0"
pylance = "^0.4.15"
pandas = "^2.0.1"
pyarrow = "^12.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.270"
pytype = "^2023.5.24"
poethepoet = "^0.20.0"
pytest = "^7.3.1"
nest-asyncio = "^1.5.6"
jupyterlab = "^4.0.0"
ipython = "<8.13"
jupyter = {extras = ["black"], version = "^1.0.0"}

[tool.poetry.extras]
redis = ["redis"]
debug = ["colorama", "pygments"]

[tool.poe.tasks]
_ruff = "ruff --fix **/*.py"
_black = "black ."
_pytype = "pytype --config=pytype.toml"
lint = ["_ruff", "_black"]
check = ["lint", "_pytype"]
test = "ward"
all = ["check", "test"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
